[gd_scene load_steps=2 format=3 uid="uid://bdwxg8vwvnvg6"]

[ext_resource type="Script" path="res://ca3 framework/Relationships Mode/Root/relationships_score.gd" id="1_pcvv5"]

[node name="Relationships Score" type="Node2D"]
script = ExtResource("1_pcvv5")

[node name="Label" type="Label" parent="."]
offset_left = 292.0
offset_top = 55.0
offset_right = 729.0
offset_bottom = 110.0
theme_override_font_sizes/font_size = 40
text = "RELATIONSHIP POINTS"

[node name="Label2" type="Label" parent="."]
offset_left = 206.0
offset_top = 183.0
offset_right = 306.0
offset_bottom = 238.0
theme_override_font_sizes/font_size = 40
text = "LEE 1"

[node name="Label3" type="Label" parent="."]
offset_left = 206.0
offset_top = 265.0
offset_right = 306.0
offset_bottom = 320.0
theme_override_font_sizes/font_size = 40
text = "LEE 2"

[node name="Label4" type="Label" parent="."]
offset_left = 203.0
offset_top = 359.0
offset_right = 303.0
offset_bottom = 414.0
theme_override_font_sizes/font_size = 40
text = "LEE 3"

[node name="LEE1" type="ProgressBar" parent="."]
offset_left = 372.0
offset_top = 189.0
offset_right = 800.0
offset_bottom = 227.0

[node name="LEE2" type="ProgressBar" parent="."]
offset_left = 377.0
offset_top = 276.0
offset_right = 805.0
offset_bottom = 314.0

[node name="LEE3" type="ProgressBar" parent="."]
offset_left = 379.0
offset_top = 362.0
offset_right = 807.0
offset_bottom = 400.0

[node name="Start" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[node name="End" type="Timer" parent="."]

[connection signal="timeout" from="Start" to="." method="_on_start_timeout"]
[connection signal="timeout" from="End" to="." method="_on_end_timeout"]
